envoy/envoy-gateway.yaml
# Based on: https://github.com/envoyproxy/envoy/tree/main/examples/front-proxy
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: server_app
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: ""
                          request_headers_to_remove: ["x-instana-s", "x-instana-t", "tracestate"]
                          route:
                            cluster: server_app
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                tracing:
                  provider:
                    name: envoy.tracers.opentelemetry
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                      grpc_service:
                        envoy_grpc:
                          cluster_name: instana_agent
                        timeout: 0.250s
                      service_name: envoy-front-proxy
  clusters:
    - name: server_app
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: server_app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: server-app
                      port_value: 8000
    - name: instana_agent
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options:
              allow_connect: true
      load_assignment:
        cluster_name: instana_agent
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                    address: instana-agent
                    port_value: 4317

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
